app/base/02-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: quarkus
    app.kubernetes.io/component: quarkus
    app.kubernetes.io/instance: quarkus
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: quarkus-demo
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: "8"
  name: quarkus
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    app: quarkus
    deploymentconfig: quarkus
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: quarkus
        deploymentconfig: quarkus
    spec:
      containers:
      - image: quarkus
        imagePullPolicy: Always
        name: quarkus
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources:
          requests:
            cpu: 100m 
            memory: 128Mi 
          limits:
            cpu: 100m 
            memory: 128Mi 
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccountName: quarkus
      terminationGracePeriodSeconds: 30
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: false
        containerNames:
          - quarkus
        from:
          kind: ImageStreamTag
          namespace: cicd
          name: 'quarkus:latest'
  test: false
